# mcqp

./: .gitignore  CODE_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
example/: config.mcq  full.mcq  mcpoll.mcq  message.mcq  poll.mcq  questions.mcq
grammar/: mcqp.pest
src/: check.rs  command.rs  config.rs  display.rs  file.rs  log.rs  main.rs  matches.rs  parser.rs  send.rs  utils.rs
src/parser/: config_parser.rs  message_parser.rs  mod.rs  poll_parser.rs  question_parser.rs
src/sections/: config.rs  message.rs  mod.rs  poll.rs  question.rs
