[package]
name = "mcqp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.39"
colored = "3.0.0"
dirs = "6.0.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
