[package]
name = "mcqp"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for sending messages/polls to telegram."
authors = ["Mohaned Sherhan"]
license-file = "LICENSE"
keywords = ["cli", "interpreter", "telegram"]
repository = "https://github.com/mcqp/mcqp"
documentation = "https://mcqp.github.io/docs/intro"
homepage = "https://mcqp.github.io/"

[package.metadata.deb]
maintainer = "Mohaned Sherhan"
copyright = "2025, Mohaned Sherhan"
license-file = ["LICENSE"]
extended-description = """A CLI tool for sending messages/polls to telegram."""
depends = "$auto"
assets = [
    ["target/release/mcqp", "usr/local/bin/", "755"],
]

[[bin]]
name = "mcqp"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
clap = "4.5.39"
colored = "3.0.0"
dirs = "6.0.0"
pest = "2.8.2"
pest_derive = "2.8.2"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
